Removed webpacker as failing needing config yml

--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,9 @@
 # ignore bootsnap compile cache
 #/tmp/cache/bootsnap-compile-cache
 #/tmp/cache/bootsnap-load-path-cache
-/tmp/cache/
+# /tmp/cache/
 
 
 # ignore development log 
-/log/development.log
+# /log/development.log
 
