--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@
 # ignore development log 
 # /log/development.log
 
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
